--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@casl/ability": "^6.5.0",
     "@fastify/cookie": "^9.1.0",
     "@fastify/multipart": "^8.0.0",
     "@fastify/static": "^6.12.0",
@@ -33,7 +34,7 @@
     "@nestjs/core": "^10.2.8",
     "@nestjs/event-emitter": "^2.0.3",
     "@nestjs/jwt": "^10.2.0",
-    "@nestjs/passport": "^10.0.2",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-fastify": "^10.2.8",
     "@nestjs/platform-socket.io": "^10.2.8",
     "@nestjs/schedule": "^4.0.0",
@@ -46,6 +47,7 @@
     "@socket.io/redis-emitter": "^5.1.0",
     "@types/lodash": "^4.14.201",
     "axios": "^1.6.1",
+    "bcrypt": "^5.1.1",
     "bull": "^4.11.4",
     "cache-manager": "^5.2.4",
     "cache-manager-ioredis-yet": "^1.2.2",
@@ -63,10 +65,12 @@
     "handlebars": "^4.7.8",
     "helmet": "^7.1.0",
     "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mysql2": "^3.6.1",
     "nanoid": "^3.3.6",
     "nodemailer": "^6.9.7",
+    "validator": "^13.11.0",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
@@ -80,21 +84,28 @@
     "systeminformation": "^5.21.16",
     "typeorm": "^0.3.17",
     "ua-parser-js": "^1.0.37",
+    "uuid": "^9.0.1",
     "winston": "^3.11.0",
     "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.1.0",
     "@compodoc/compodoc": "^1.1.22",
+    "@types/validator": "^13.11.2",
     "@nestjs/cli": "^10.2.1",
     "@nestjs/schematics": "^10.0.3",
     "@nestjs/testing": "^10.2.8",
+    "@types/bcrypt": "^5.0.2",
     "@types/cache-manager": "^4.0.5",
     "@types/jest": "29.5.8",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.10",
     "@types/node": "^20.9.0",
+    "@types/passport-jwt": "^3.0.13",
+    "@types/passport-local": "^1.0.38",
     "@types/supertest": "^2.0.16",
     "@types/ua-parser-js": "^0.7.39",
+    "@types/uuid": "^9.0.7",
     "cross-env": "^7.0.3",
     "eslint": "^8.53.0",
     "jest": "^29.7.0",
